crates/alder-parse/src/item/snapshots/alder_parse__item__trait___tests__trait_multiple_items.snap
---
source: crates/alder-parse/src/item/trait_.rs
description: "trait Monoid[a] {\n    fn empty() a\n    fn append(x: a, y: a) a\n    fn concat(xs: Array[a]) a { Array.fold(xs, empty(), append) }\n}\n"
---
TraitDecl {
    name: Located {
        region: Region {
            start: Position {
                line: 1,
                column: 7,
            },
            end: Position {
                line: 1,
                column: 13,
            },
        },
        value: "Monoid",
    },
    params: [
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 14,
                },
                end: Position {
                    line: 1,
                    column: 15,
                },
            },
            value: "a",
        },
    ],
    where_clause: [],
    items: [
        Fn(
            FnDecl {
                is_async: false,
                name: Located {
                    region: Region {
                        start: Position {
                            line: 2,
                            column: 8,
                        },
                        end: Position {
                            line: 2,
                            column: 13,
                        },
                    },
                    value: "empty",
                },
                params: [],
                ret: Some(
                    Located {
                        region: Region {
                            start: Position {
                                line: 2,
                                column: 16,
                            },
                            end: Position {
                                line: 2,
                                column: 17,
                            },
                        },
                        value: Var {
                            name: "a",
                            args: [],
                        },
                    },
                ),
                where_clause: [],
                body: None,
            },
        ),
        Fn(
            FnDecl {
                is_async: false,
                name: Located {
                    region: Region {
                        start: Position {
                            line: 3,
                            column: 8,
                        },
                        end: Position {
                            line: 3,
                            column: 14,
                        },
                    },
                    value: "append",
                },
                params: [
                    Param {
                        pattern: Located {
                            region: Region {
                                start: Position {
                                    line: 3,
                                    column: 15,
                                },
                                end: Position {
                                    line: 3,
                                    column: 16,
                                },
                            },
                            value: Var(
                                "x",
                            ),
                        },
                        annotation: Some(
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 3,
                                        column: 18,
                                    },
                                    end: Position {
                                        line: 3,
                                        column: 19,
                                    },
                                },
                                value: Var {
                                    name: "a",
                                    args: [],
                                },
                            },
                        ),
                    },
                    Param {
                        pattern: Located {
                            region: Region {
                                start: Position {
                                    line: 3,
                                    column: 21,
                                },
                                end: Position {
                                    line: 3,
                                    column: 22,
                                },
                            },
                            value: Var(
                                "y",
                            ),
                        },
                        annotation: Some(
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 3,
                                        column: 24,
                                    },
                                    end: Position {
                                        line: 3,
                                        column: 25,
                                    },
                                },
                                value: Var {
                                    name: "a",
                                    args: [],
                                },
                            },
                        ),
                    },
                ],
                ret: Some(
                    Located {
                        region: Region {
                            start: Position {
                                line: 3,
                                column: 27,
                            },
                            end: Position {
                                line: 3,
                                column: 28,
                            },
                        },
                        value: Var {
                            name: "a",
                            args: [],
                        },
                    },
                ),
                where_clause: [],
                body: None,
            },
        ),
        Fn(
            FnDecl {
                is_async: false,
                name: Located {
                    region: Region {
                        start: Position {
                            line: 4,
                            column: 8,
                        },
                        end: Position {
                            line: 4,
                            column: 14,
                        },
                    },
                    value: "concat",
                },
                params: [
                    Param {
                        pattern: Located {
                            region: Region {
                                start: Position {
                                    line: 4,
                                    column: 15,
                                },
                                end: Position {
                                    line: 4,
                                    column: 17,
                                },
                            },
                            value: Var(
                                "xs",
                            ),
                        },
                        annotation: Some(
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 4,
                                        column: 19,
                                    },
                                    end: Position {
                                        line: 4,
                                        column: 27,
                                    },
                                },
                                value: Named {
                                    path: Path {
                                        segments: [
                                            Located {
                                                region: Region {
                                                    start: Position {
                                                        line: 4,
                                                        column: 19,
                                                    },
                                                    end: Position {
                                                        line: 4,
                                                        column: 24,
                                                    },
                                                },
                                                value: "Array",
                                            },
                                        ],
                                    },
                                    args: [
                                        Located {
                                            region: Region {
                                                start: Position {
                                                    line: 4,
                                                    column: 25,
                                                },
                                                end: Position {
                                                    line: 4,
                                                    column: 26,
                                                },
                                            },
                                            value: Var {
                                                name: "a",
                                                args: [],
                                            },
                                        },
                                    ],
                                },
                            },
                        ),
                    },
                ],
                ret: Some(
                    Located {
                        region: Region {
                            start: Position {
                                line: 4,
                                column: 29,
                            },
                            end: Position {
                                line: 4,
                                column: 30,
                            },
                        },
                        value: Var {
                            name: "a",
                            args: [],
                        },
                    },
                ),
                where_clause: [],
                body: Some(
                    Located {
                        region: Region {
                            start: Position {
                                line: 4,
                                column: 31,
                            },
                            end: Position {
                                line: 4,
                                column: 66,
                            },
                        },
                        value: Block {
                            stmts: [],
                            tail: Some(
                                Located {
                                    region: Region {
                                        start: Position {
                                            line: 4,
                                            column: 33,
                                        },
                                        end: Position {
                                            line: 4,
                                            column: 64,
                                        },
                                    },
                                    value: Call {
                                        function: Located {
                                            region: Region {
                                                start: Position {
                                                    line: 4,
                                                    column: 33,
                                                },
                                                end: Position {
                                                    line: 4,
                                                    column: 43,
                                                },
                                            },
                                            value: Access {
                                                record: Located {
                                                    region: Region {
                                                        start: Position {
                                                            line: 4,
                                                            column: 33,
                                                        },
                                                        end: Position {
                                                            line: 4,
                                                            column: 38,
                                                        },
                                                    },
                                                    value: Path(
                                                        Path {
                                                            segments: [
                                                                Located {
                                                                    region: Region {
                                                                        start: Position {
                                                                            line: 4,
                                                                            column: 33,
                                                                        },
                                                                        end: Position {
                                                                            line: 4,
                                                                            column: 38,
                                                                        },
                                                                    },
                                                                    value: "Array",
                                                                },
                                                            ],
                                                        },
                                                    ),
                                                },
                                                field: Located {
                                                    region: Region {
                                                        start: Position {
                                                            line: 4,
                                                            column: 39,
                                                        },
                                                        end: Position {
                                                            line: 4,
                                                            column: 43,
                                                        },
                                                    },
                                                    value: "fold",
                                                },
                                            },
                                        },
                                        arguments: [
                                            Located {
                                                region: Region {
                                                    start: Position {
                                                        line: 4,
                                                        column: 44,
                                                    },
                                                    end: Position {
                                                        line: 4,
                                                        column: 46,
                                                    },
                                                },
                                                value: Var(
                                                    "xs",
                                                ),
                                            },
                                            Located {
                                                region: Region {
                                                    start: Position {
                                                        line: 4,
                                                        column: 48,
                                                    },
                                                    end: Position {
                                                        line: 4,
                                                        column: 55,
                                                    },
                                                },
                                                value: Call {
                                                    function: Located {
                                                        region: Region {
                                                            start: Position {
                                                                line: 4,
                                                                column: 48,
                                                            },
                                                            end: Position {
                                                                line: 4,
                                                                column: 53,
                                                            },
                                                        },
                                                        value: Var(
                                                            "empty",
                                                        ),
                                                    },
                                                    arguments: [],
                                                },
                                            },
                                            Located {
                                                region: Region {
                                                    start: Position {
                                                        line: 4,
                                                        column: 57,
                                                    },
                                                    end: Position {
                                                        line: 4,
                                                        column: 63,
                                                    },
                                                },
                                                value: Var(
                                                    "append",
                                                ),
                                            },
                                        ],
                                    },
                                },
                            ),
                        },
                    },
                ),
            },
        ),
    ],
}
