crates/alder-parse/src/item/snapshots/alder_parse__item__trait___tests__trait_pub.snap
---
source: crates/alder-parse/src/item/trait_.rs
description: "pub trait Show[a] {\n    fn show(value: a) String\n}\n"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 3,
            column: 2,
        },
    },
    value: Item {
        attributes: [],
        visibility: Pub(
            Region {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 4,
                },
            },
        ),
        kind: Trait(
            TraitDecl {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 11,
                        },
                        end: Position {
                            line: 1,
                            column: 15,
                        },
                    },
                    value: "Show",
                },
                params: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 16,
                            },
                            end: Position {
                                line: 1,
                                column: 17,
                            },
                        },
                        value: "a",
                    },
                ],
                where_clause: [],
                items: [
                    Fn(
                        FnDecl {
                            name: Located {
                                region: Region {
                                    start: Position {
                                        line: 2,
                                        column: 8,
                                    },
                                    end: Position {
                                        line: 2,
                                        column: 12,
                                    },
                                },
                                value: "show",
                            },
                            params: [
                                Param {
                                    pattern: Located {
                                        region: Region {
                                            start: Position {
                                                line: 2,
                                                column: 13,
                                            },
                                            end: Position {
                                                line: 2,
                                                column: 18,
                                            },
                                        },
                                        value: Var(
                                            "value",
                                        ),
                                    },
                                    annotation: Some(
                                        Located {
                                            region: Region {
                                                start: Position {
                                                    line: 2,
                                                    column: 20,
                                                },
                                                end: Position {
                                                    line: 2,
                                                    column: 21,
                                                },
                                            },
                                            value: Var {
                                                name: "a",
                                                args: [],
                                            },
                                        },
                                    ),
                                },
                            ],
                            ret: Some(
                                Located {
                                    region: Region {
                                        start: Position {
                                            line: 2,
                                            column: 23,
                                        },
                                        end: Position {
                                            line: 2,
                                            column: 29,
                                        },
                                    },
                                    value: Named {
                                        path: Path {
                                            segments: [
                                                Located {
                                                    region: Region {
                                                        start: Position {
                                                            line: 2,
                                                            column: 23,
                                                        },
                                                        end: Position {
                                                            line: 2,
                                                            column: 29,
                                                        },
                                                    },
                                                    value: "String",
                                                },
                                            ],
                                        },
                                        args: [],
                                    },
                                },
                            ),
                            where_clause: [],
                            body: None,
                        },
                    ),
                ],
            },
        ),
    },
}
